--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.App {
+  min-height: 100vh;
+  background-color:#F7F7F8;
+}
