feat: add reset form function

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,25 @@ body {
   min-height: 100vh;
   background-color:#F7F7F8;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+@media screen and (max-width: 1000px) {
+  .container {
+    flex-direction: column;
+    padding: 20px;
+    gap: 20px;
+    align-items: center;
+  }
+
+  .form-container {
+    width: 100%;
+    max-width: 773px;
+    min-width: unset;
+  }
+}
+
