--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
 @media screen and (max-width: 1000px) {
   .container {
     flex-direction: column;
+    justify-content: flex-start;
     padding: 20px;
     gap: 20px;
     align-items: center;
@@ -30,6 +31,12 @@ body {
     width: 100%;
     max-width: 773px;
     min-width: unset;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .container {
+    padding: 20px 10px;
   }
 }
 
